# kasa-web-controller

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  command_queue.py  config.py  connection.py  device_manager.py  main.py  models.py  schemas.py
app/core/: backend.py  exceptions.py  models.py  registry.py
app/kasa/: backend.py
app/miio/: __init__.py  backend.py  config.py  connection.py
config/: .env.example  devices.example.json
static/: app.js  index.html  style.css
tests/: test_device.py  test_device_by_mac.py  test_discover.py
tests/miio/: test_device.py  test_discover.py
