[project]
name = "kasa-web-controller"
version = "0.1.0"
description = "Web-based controller for TP-Link Kasa smart devices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-kasa>=0.7.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
kasa-web = "app.main:run"
