[project]
name = "smartplug-hub"
version = "0.1.0"
description = "Multi-protocol web controller for smart plugs and power strips"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-kasa>=0.7.0",
    "python-miio>=0.6.0.dev0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
smartplug-hub = "app.__main__:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
